--- a/app/popup.html
+++ b/app/popup.html
@@ -13,7 +13,34 @@
   <link href="styles/main.css" rel="stylesheet">
   <!-- endbuild -->
   </head>
-  <body>
+  <body class="good-padding">
+  <h4><b>SDU Disqus</b></h4>
+  <div class="panel panel-primary">
+      <div class="panel-heading">
+          <h3 class="panel-title">Who are you?</h3>
+      </div>
+      <form class="form-horizontal" action="http://127.0.0.1:35729/login/" method="post">
+          <fieldset class="good-padding">
+              <div class="form-group">
+                  <div class="col-lg-10">
+                      <input type="email" class="form-control" id="inputEmail" placeholder="Email" name="email">
+                  </div>
+              </div>
+              <div class="form-group">
+                  <div class="col-lg-10">
+                      <input type="password" class="form-control" id="inputPassword" placeholder="Password">   
+                  </div>
+              </div>
+              <div class="form-group">
+                  <div class="col-lg-1">
+                      <button type="submit" id="submit-login" class="btn btn-primary btn-sm ">
+                        Submit
+                      </button>
+                  </div>
+              </div>
+          </fieldset>
+      </form>
+  </div>
 
 
   <!-- build:js scripts/vendor.js -->
