--- a/app/popup.html
+++ b/app/popup.html
@@ -17,24 +17,52 @@
   <h4><b>SDU Disqus</b></h4>
   <div class="panel panel-primary">
       <div class="panel-heading">
-          <h3 class="panel-title">Who are you?</h3>
-      </div>
-      <form class="form-horizontal" action="http://127.0.0.1:8000/login/" method="post">
+          <h3 class="panel-title" style="float:left">Who are you?</h3>
+          <button type="button" id="changer" class="btn btn-default" data-container="body" data-toggle="popover" data-placement="top" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
+          style="color:white;margin-left:50px;margin-top:-8px" >Sign In</button>
+      </div>      
+      <form class="form-horizontal" id="registration" action="http://127.0.0.1:8000/api/v1/my_user/" method="post">
           <fieldset class="good-padding">
               <div class="form-group">
                   <div class="col-lg-10">
-                      <input type="email" class="form-control" id="inputEmail" placeholder="Email" name="email">
+                      <input type="email" class="form-control" id="inputEmail" placeholder="Email" name="email" reuired>
                   </div>
               </div>
               <div class="form-group">
                   <div class="col-lg-10">
-                      <input type="password" class="form-control" name="password" id="inputPassword" placeholder="Password">   
+                      <input type="text" class="form-control" id="inputName" placeholder="Name" name="name" required>
+                  </div>
+              </div>
+              <div class="form-group">
+                  <div class="col-lg-10">
+                      <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" required>   
                   </div>
               </div>
               <div class="form-group">
                   <div class="col-lg-1">
                       <button type="submit" id="submit-login" class="btn btn-primary btn-sm ">
-                        Submit
+                        Registrate
+                      </button>
+                  </div>
+              </div>
+          </fieldset>
+      </form>
+      <form class="form-horizontal hidden" id="sign_in" action="http://127.0.0.1:8000/api/v1/my_user/" method="put">
+          <fieldset class="good-padding">
+              <div class="form-group">
+                  <div class="col-lg-10">
+                      <input type="email" class="form-control" id="inputEmail" placeholder="Email" name="email" reuired>
+                  </div>
+              </div>
+              <div class="form-group">
+                  <div class="col-lg-10">
+                      <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" required>   
+                  </div>
+              </div>
+              <div class="form-group">
+                  <div class="col-lg-1">
+                      <button type="submit" id="submit-login" class="btn btn-primary btn-sm ">
+                        Sign In
                       </button>
                   </div>
               </div>
@@ -42,49 +70,17 @@
       </form>
   </div>
 
-  <p><h1 style="margin-left:25%;font-style:bold;">SDU Disqus</h1></p>
-
- <!-- Creating 1st div -->
-  <div class="panel panel-primary" style="width:90%;margin-left:20px">
-    <div class="panel-heading">
-        Who are you?
-    </div>
-    <div class="panel-body">
-      <div class="form-group">
-        <div class="col-lg-10">
-          <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-        </div>
-        <div class="col-lg-10">
-          <input type="text" name = "mustName" class="form-control" id="nameInput" placeholder="Name">
-        </div>
-      </div>
+ <!-- BODY -->
+<div class="panel panel-primary hidden" >
+  <div class="panel-heading">
+      Body
+  </div>
+  <div class="panel-body" id="someID" style="overflow-y:auto;max-height:280px !important;">
+    <div class="list-group" id="omg" >
     </div>
   </div>
 
- <!-- Creating 2nd div -->
-  <div class="panel panel-primary" style="width:90%;margin-left:20px">
-    <div class="panel-heading">
-        Body
-    </div>
-    <div class="panel-body" id="someID" style="overflow-y:auto;max-height:280px !important;">
-      <div class="list-group" id="omg" >
-          <!--<div class="list-group-item">
-              <div class="row-action-primary">
-                  <img class="circle" src="http://cs623127.vk.me/v623127561/2833a/pEIEYnA-BPE.jpg" />
-              </div>
-              <div class="row-content">
-                  <div class="least-content">01.05.15</div>
-                  <h4 class="list-group-item-heading">Tamerlan</h4>
-                  <p class="list-group-item-text">Hello word.</p>
-              </div>
-          </div> -->
-          <!-- horizontal line
-            <div class="list-group-separator"></div>
-          -->
-      </div>
-    </div>
-
- <!-- Creating footer div -->
+ <!-- FOOTER -->
     <div class="panel-footer" style="margin-top:-5%">
       <i class="mdi-communication-messenger" style="font:20px 'Material-Design-Icons';margin-top:1%"></i>
       <div class="form-control-wrapper" style=""> 
@@ -92,7 +88,6 @@
           <div class="floating-label" style="width:80%;margin-left:10%;bottom:20px;font-weight:bold">
             Type your comments and press Enter
           </div>
-
       </div>
     </div>
   </div>
@@ -109,21 +104,6 @@
   <script src="js/jquery.autoSave.min.js"></script>
   <script src="scripts/background.js"></script>
 
-  <!-- endbower -->
-  <!-- endbuild -->
-
-  <!-- build:js scripts/popup.js -->
-  <script src="scripts/popup.js"></script>
-  <!-- endbuild -->
-
-
-  <!-- build:js scripts/vendor.js -->
-  <!-- bower:js -->
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/reactive/ractive.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
-  <script src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
