--- a/app/popup.html
+++ b/app/popup.html
@@ -107,6 +107,7 @@
   <script src="js/md5.js"></script>
   <script src="js/jquery.autoSave.min.js"></script>
   <script src="scripts/background.js"></script>
+  <!-- <script src="scripts/backend.js"></script> -->
 
   <!-- endbower -->
   <!-- endbuild -->
