--- a/app/popup.html
+++ b/app/popup.html
@@ -80,7 +80,7 @@
   </button>
   <div style="margin-top:-15px" id="user-info_label" ></div>
   </div>
-  <div class="panel-body" id="someID" style="overflow-y:auto;max-height:280px !important;">
+  <div class="panel-body" id="commentID" style="overflow-y:auto;height:30px">
     <div class="list-group" id="comments" >
     </div>
   </div>
